--- a/server/src-server/Loadbalancing/LoadBalancing/log4net.config
+++ b/server/src-server/Loadbalancing/LoadBalancing/log4net.config
@@ -67,6 +67,11 @@
     <level value="DEBUG" />
     <appender-ref ref="LogFileAppender" />
   </logger>
+  
+  <logger name="Photon.LoadBalancing.GameServer" additivity="false">
+    <level value="DEBUG" />
+    <appender-ref ref="LogFileAppender" />
+  </logger>
 
   <logger name="Photon.LoadBalancing.LoadShedding" additivity="false">
     <level value="INFO" />
