Added logs to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # =============== #
 Temp/
 Library/
+server/deploy/log/
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
